# Sofware-Q

./: .clang-tidy  .flake8  .gitignore  .semgrep.yml  AUTOHOTKEY_TEST_GUIDE.md  CHANGES_REFERENCE.md  COMPLETE_TESTING_INTEGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  PRESENTATION_CONTENT.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  REAL_VS_ECHO_TESTS.md  TESTING_DOCUMENTATION_GUIDE.md  TESTING_STRATEGY_ANALYSIS.md  TESTING_SUMMARY.md  TESTING_SUMMARY_REPORT.md  TEST_CASES_DIAGRAMSCENE.md  TEST_UPDATES_COMPLETE.md  check_diagramscene_output.py  check_failures.py  debug_test_execution.py  dynamic_analysis_report.json  dynamic_analysis_report.txt  dynamic_analysis_report_raw.txt  fix_expected_fields.py  quick_test_verify.py  requirements-dev.txt  test_execution_flow.py  test_real_execution.py  test_real_tests.py  verify_tests.py  个人总结报告.md
.github/workflows/: ci.yml
agent/: FlaskApp.py  _run_wrapper.py  ahk_test_results.json  ahk_test_results.txt  analysis_clang_tidy_raw.txt  analysis_report_cpp.json  analysis_report_cpp.txt  analyzer_cpp.py  autohotkey_integration.py  clean_clang_output.py  diagramscene_functional_tests.py  diagramscene_real_tests.py  diagramscene_tests.ahk  diagramscene_tests_v2.ahk  dynamic_analysis_report.json  dynamic_analysis_report.txt  dynamic_tester.py  fix_cpp_patches.py  fix_result_static.py  generated_tests.json  hf_router_models.json  hf_test_generator.py  lc_pipeline.py  perf_project_runner.py  perf_tester.py  pipeline.py  prompts.py  reasoning_module.py  run_autohotkey_tests.py  run_clang_tidy_safe.py  run_pipeline_noninteractive_cpp.py  safe_run_selection.py  simulate_upload.py  test_dynamic_filter.py  verify_tests.py
agent/Templates/: index.html
agent/archive_python_tools_20251124_142656/: aggressive_repair.py  analyzer_py.py  bug_snippets_py.txt  check_repaired.py  count_hf_models.py  fix_python_patches.py  force_hf_one.py  force_hf_retry.py  force_hf_retry_llama.py  generate_patches.py  inspect_gemini_raw.py  list_hf_router_models.py  one_snippet_py.txt  reconstruct_patches.py  repair_patches.py  rerun_failed_snippets.py  run_one_snippet.py  run_pipeline_noninteractive.py  tempCodeRunnerFile.py  test.py  test_gemini_prompts.py  test_hf.py  test_hf_router.py  test_mistral_pipeline.py  test_transformers.py
agent/archive_python_tools_20251124_142656/patches_py_fixed/: aggr_reconstructed_aggr_reconstructed_patch_1_1762190501_2.diff  aggr_reconstructed_patch_1_1762190501_2.diff  aggressive_repair_report.txt  cleaned_repatch_3_1762191554.diff  patch_1.diff  patch_10.diff  patch_11.diff  patch_12.diff  patch_13.diff  patch_1_1762189250_1.diff  patch_1_1762189262_2.diff  patch_1_1762189272_3.diff  patch_1_1762190489_1.diff  patch_1_1762190501_2.diff  patch_1_1762190510_3.diff  patch_1_1762192277_1.diff  patch_1_1762192286_2.diff  patch_1_1762192293_3.diff  patch_1_1762334621_1.diff  patch_1_1762335828_2.diff  patch_1_1762336242_1.diff  patch_1_1762336248_2.diff  patch_1_1762336254_3.diff  patch_1_1762340552_1.diff  patch_1_1762340561_2.diff  patch_1_1762340566_3.diff  patch_1_1762341334_1.diff  patch_1_1762341341_2.diff  patch_1_1762341349_3.diff  patch_1_1762343314_1.diff  patch_1_1762343321_2.diff  patch_1_1762343328_3.diff  patch_1_1762357680_1.diff  patch_1_1762357686_2.diff  patch_1_1762357693_3.diff  patch_1_1762358764_1.diff  patch_1_1762358772_2.diff  patch_1_1762358779_3.diff  patch_1_1762948406_1.diff  (+191 more)
agent/cpp_tests/: CMakeLists.txt  test_run_output.txt
agent/cpp_tests/harness/: diagram_harness.cpp
agent/cpp_tests/tests/: gtest_main_qt.cpp  test_arrow.cpp  test_concurrency_gtest.cpp  test_deletecommand.cpp  test_diagramitem.cpp  test_diagramitemgroup.cpp  test_diagrampath.cpp  test_diagramscene.cpp  test_diagramtextitem.cpp  test_equiv_diagram.cpp  test_example.cpp  test_findreplacedialog.cpp  test_global.cpp  test_mainwindow.cpp  test_mygraphicview.cpp  test_snapshotcommand.cpp
agent/scripts/: generate_result_json.py  merge_cpp_report_into_result.py  merge_perf_into_result.py  run_ahk_smoke.ps1  test_upload_flow.py  update_workspaces.py
agent/snippets/: bug_snippets_cpp.txt
agent/tests/: test_smoke.py
agent/tmp_generated/: equiv_FlaskApp_compare_files_0.py  equiv_FlaskApp_compare_files_1.py  equiv_FlaskApp_compare_files_2.py  equiv_FlaskApp_compare_files_3.py  equiv_FlaskApp_compare_patch_0.py  equiv_FlaskApp_compare_patch_1.py  equiv_FlaskApp_compare_patch_2.py  equiv_FlaskApp_compare_patch_3.py  equiv_FlaskApp_create_submission_package_0.py  equiv_FlaskApp_create_submission_package_1.py  equiv_FlaskApp_create_submission_package_2.py  equiv_FlaskApp_create_submission_package_3.py  equiv_FlaskApp_handle_file_upload_0.py  equiv_FlaskApp_handle_file_upload_1.py  equiv_FlaskApp_handle_file_upload_2.py  equiv_FlaskApp_handle_file_upload_3.py  equiv_FlaskApp_index_0.py  equiv_FlaskApp_index_1.py  equiv_FlaskApp_index_2.py  equiv_FlaskApp_index_3.py  equiv_FlaskApp_interpret_command_0.py  equiv_FlaskApp_interpret_command_1.py  equiv_FlaskApp_interpret_command_2.py  equiv_FlaskApp_interpret_command_3.py  equiv_FlaskApp_process_command_0.py  equiv_FlaskApp_process_command_1.py  equiv_FlaskApp_process_command_2.py  equiv_FlaskApp_process_command_3.py  equiv_FlaskApp_run_auto_fix_py_0.py  equiv_FlaskApp_run_auto_fix_py_1.py  equiv_FlaskApp_run_auto_fix_py_2.py  equiv_FlaskApp_run_auto_fix_py_3.py  equiv_FlaskApp_run_command_0.py  equiv_FlaskApp_run_command_1.py  equiv_FlaskApp_run_command_2.py  equiv_FlaskApp_run_command_3.py  equiv_FlaskApp_run_documentation_checks_0.py  equiv_FlaskApp_run_documentation_checks_1.py  equiv_FlaskApp_run_documentation_checks_2.py  equiv_FlaskApp_run_documentation_checks_3.py  (+844 more)
agent/tools/: concurrency_harness.py
docs/: analysis.md  diagram_experiment2.puml  diagram_experiment2_README.md  diagramscene_autohotkey_smoke.ahk  diagramscene_test_cases.md  generated_tests_diagramscene.json  sequence_experiment_events.puml  sequence_project_runtime_experiment2.puml
tools/: plantuml_render_server.py
(+6 files in other folders)
